--- a/index.html
+++ b/index.html
@@ -504,32 +504,32 @@ font-size: 0.8rem !important;
 font-size: 0.75rem !important;
 }
 
-/* Stats Cards Mobile */
+/* Stats Cards Mobile - Smaller */
 .stat-card {
-padding: 8px !important;
-border-radius: 12px !important;
+padding: 6px !important;
+border-radius: 10px !important;
 }
 
 .stat-card h3 {
-font-size: 1.2rem !important;
-margin: 5px 0 !important;
+font-size: 1rem !important;
+margin: 3px 0 !important;
 }
 
 .stat-card p {
-font-size: 0.7rem !important;
+font-size: 0.6rem !important;
 margin: 0 !important;
 }
 
 .stat-card small {
-font-size: 0.65rem !important;
+font-size: 0.6rem !important;
 display: none !important; /* Hide "اضغط للعرض" on mobile */
 }
 
 /* Make stats grid 2 columns on mobile (compact) */
 #adminPanel > div:first-of-type {
 grid-template-columns: 1fr 1fr !important;
-gap: 8px !important;
-margin-bottom: 15px !important;
+gap: 6px !important;
+margin-bottom: 12px !important;
 }
 
 /* Search Mobile */
@@ -544,22 +544,54 @@ font-size: 0.75rem !important;
 min-width: 80px !important;
 }
 
-/* Table Mobile - No Horizontal Scroll */
+/* Table Mobile - Hide non-essential columns */
 .table-container {
-overflow-x: hidden !important;
+overflow-x: auto !important;
+-webkit-overflow-scrolling: touch;
 width: 100% !important;
 }
 
 table {
-font-size: 0.55rem !important;
+font-size: 0.65rem !important;
 width: 100% !important;
-table-layout: fixed !important;
 }
 
 table th {
-padding: 3px 1px !important;
-font-size: 0.55rem !important;
-word-wrap: break-word !important;
+padding: 6px 4px !important;
+font-size: 0.65rem !important;
+background: linear-gradient(135deg, var(--primary) 0%, var(--info) 100%) !important;
+color: white !important;
+font-weight: 600 !important;
+}
+
+table td {
+padding: 6px 4px !important;
+font-size: 0.65rem !important;
+}
+
+/* Hide non-essential columns on mobile by default */
+table th:nth-child(4),  /* Type */
+table td:nth-child(4),
+table th:nth-child(5),  /* Year */
+table td:nth-child(5),
+table th:nth-child(6),  /* Chassis */
+table td:nth-child(6),
+table th:nth-child(7),  /* Motor */
+table td:nth-child(7),
+table th:nth-child(9),  /* Date */
+table td:nth-child(9),
+table th:nth-child(11), /* Images */
+table td:nth-child(11),
+table th:nth-child(12)  /* Actions */
+table td:nth-child(12) {
+display: none !important;
+}
+
+/* Show hidden columns when toggle is active */
+table.show-all-columns th,
+table.show-all-columns td {
+display: table-cell !important;
+}
 white-space: nowrap;
 }
 
@@ -1124,6 +1156,7 @@ height: 300px;
 <button id="uploadLocalToFirebaseBtn" class="btn" style="background: linear-gradient(135deg, #27ae60 0%, #229954 100%); color: white; display: none;">☁️ رفع البيانات المحلية</button>
 <button id="cleanupDuplicatesBtn" class="btn" style="background: linear-gradient(135deg, #e67e22 0%, #d35400 100%); color: white; display: none;">🧹 تنظيف التكرار</button>
 <button id="dateFilterBtn" class="btn" style="background: linear-gradient(135deg, #16a085 0%, #1abc9c 100%); color: white;">📅 فلترة بالتاريخ</button>
+<button id="toggleColumnsBtn" class="btn" style="background: linear-gradient(135deg, #9b59b6 0%, #8e44ad 100%); color: white; display: none;">👁️ إظهار/إخفاء الأعمدة</button>
 <div style="flex: 1; display: flex; gap: 10px;">
 <select id="searchType" style="padding: 12px; border-radius: 12px; border: 2px solid var(--glass-border); background: rgba(255,255,255,0.95); font-weight: 600; min-width: 150px;">
 <option value="all">🔍 الكل</option>
@@ -2749,6 +2782,12 @@ if (userRole === 'SUPER') {
 document.getElementById('uploadLocalToFirebaseBtn').style.display = 'inline-block';
 }
 
+// Show toggle columns button on mobile only
+const isMobileDevice = /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent) || window.innerWidth <= 768;
+if (isMobileDevice) {
+document.getElementById('toggleColumnsBtn').style.display = 'inline-block';
+}
+
 // Add role badge to header
 const header = document.querySelector('header');
 const existingBadge = document.getElementById('roleBadge');
@@ -3931,6 +3970,18 @@ document.getElementById('dateFilterBtn').onclick = () => {
 document.getElementById('dateFilterModal').style.display = 'block';
 };
 
+// Toggle columns button (mobile only)
+document.getElementById('toggleColumnsBtn').onclick = () => {
+const table = document.querySelector('#dataTable').parentElement.parentElement.querySelector('table');
+if (table.classList.contains('show-all-columns')) {
+table.classList.remove('show-all-columns');
+document.getElementById('toggleColumnsBtn').innerHTML = '👁️ إظهار كل الأعمدة';
+} else {
+table.classList.add('show-all-columns');
+document.getElementById('toggleColumnsBtn').innerHTML = '👁️ إخفاء الأعمدة الزيادة';
+}
+};
+
 document.getElementById('applyDateFilterBtn').onclick = () => {
 const fromDate = document.getElementById('filterFromDate').value;
 const toDate = document.getElementById('filterToDate').value;
@@ -4716,6 +4767,12 @@ renderCurrentPage();
 console.log('✅ نظام Pagination جاهز');
 
 </script>
+
+<!-- Footer -->
+<footer style="background: linear-gradient(135deg, var(--primary) 0%, var(--info) 100%); color: white; text-align: center; padding: 15px; margin-top: 30px; font-size: 0.85rem;">
+<p style="margin: 0;">تطوير: م/ باهي التهامي | م/ مهند التهامي</p>
+<p style="margin: 5px 0 0 0; font-size: 0.75rem; opacity: 0.9;">رئاسة مركز ومدينة كفر صقر © 2025</p>
+</footer>
 
 </body>
 </html>
