--- a/index.html
+++ b/index.html
@@ -582,7 +582,7 @@ table th:nth-child(9),  /* Date */
 table td:nth-child(9),
 table th:nth-child(11), /* Images */
 table td:nth-child(11),
-table th:nth-child(12)  /* Actions */
+table th:nth-child(12), /* Actions */
 table td:nth-child(12) {
 display: none !important;
 }
@@ -592,7 +592,6 @@ table.show-all-columns th,
 table.show-all-columns td {
 display: table-cell !important;
 }
-white-space: nowrap;
 }
 
 table td {
@@ -678,7 +677,6 @@ margin-bottom: 10px !important;
 #portalSection p {
 font-size: 0.85rem !important;
 margin-bottom: 20px !important;
-}
 }
 
 /* Table Responsive Styles */
