--- a/index.html
+++ b/index.html
@@ -776,7 +776,7 @@ box-shadow: 0 4px 15px rgba(39, 174, 96, 0.5);
 
 <!-- Header -->
 <header>
-<div style="display: flex; align-items: center; gap: 8px; flex-wrap: wrap; width: 100%; justify-content: space-between;">
+<div style="display: flex; align-items: center; gap: 8px; flex-wrap: wrap; width: 100%;">
 <div style="display: flex; align-items: center; gap: 6px;">
 <img src="https://i.postimg.cc/Hs92TtbL/41jjsn4SHDL-AC-UF894-1000-QL80.jpg" 
 style="width: 35px; height: 35px; object-fit: contain; border-radius: 6px; box-shadow: 0 2px 8px rgba(0,0,0,0.3); background: white; padding: 3px; border: 1px solid rgba(255,255,255,0.5);" 
@@ -789,8 +789,7 @@ alt="علم الشرقية">
 <h1 style="font-size: 0.9rem; margin: 0; line-height: 1.2;">🏛️ رئاسة مركز كفر صقر</h1>
 <small style="font-size: 0.65rem; opacity: 0.85;">د/ أحمد المقدم</small>
 </div>
-<div style="display:flex; gap:6px; flex-wrap: wrap; align-items: center;">
-<span style="color: white; font-size: 0.7rem; opacity: 0.9; white-space: nowrap;">تطوير: م/ باهي التهامي | م/ مهند التهامي</span>
+<div style="display:flex; gap:6px; flex-wrap: wrap;">
 <button id="goPortalBtn" class="btn" style="background: rgba(255,255,255,0.15); color: white; display:none; padding: 6px 10px; font-size: 0.75rem;" onclick="location.reload()">🏠 البوابة</button>
 <button id="logoutBtn" class="btn" style="background: rgba(255,0,0,0.3); color: white; border: 2px solid rgba(255,255,255,0.4); display:none; cursor:pointer; padding: 6px 10px; font-size: 0.75rem;" onclick="logoutAdmin()">🚪 خروج</button>
 <button id="loginBtn" class="btn" style="background: rgba(255,255,255,0.25); color: white; border: 2px solid rgba(255,255,255,0.4); padding: 6px 10px; font-size: 0.75rem;">🔐 التحكم</button>
