--- a/index.html
+++ b/index.html
@@ -1570,9 +1570,18 @@ to { opacity: 1; }
 
 <!-- Footer -->
 <!-- Fixed Developer Credit - Bottom Right Corner -->
-<div style="position: fixed; bottom: 10px; right: 10px; background: rgba(0,0,0,0.7); padding: 8px 15px; border-radius: 20px; font-size: 0.75rem; color: rgba(255,255,255,0.9); z-index: 9999; backdrop-filter: blur(10px); box-shadow: 0 4px 15px rgba(0,0,0,0.3);">
-تطوير: م/ مهند التهامي
+<div style="position: fixed; bottom: 8px; right: 8px; background: rgba(0,0,0,0.4); padding: 5px 12px; border-radius: 15px; font-size: 0.65rem; color: rgba(255,255,255,0.7); z-index: 9999; backdrop-filter: blur(5px); box-shadow: 0 2px 10px rgba(0,0,0,0.2); font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-weight: 300; letter-spacing: 0.5px; transition: all 0.3s ease;">
+تطوير: م/ باهي التهامي | م/ مهند التهامي
 </div>
+
+<style>
+/* Hover effect for developer credit */
+div[style*="bottom: 8px; right: 8px"]:hover {
+background: rgba(0,0,0,0.7) !important;
+color: rgba(255,255,255,0.95) !important;
+transform: scale(1.05);
+}
+</style>
 
 <!-- JavaScript -->
 <script>
