--- a/index.html
+++ b/index.html
@@ -1981,7 +1981,7 @@ console.log('✅ نظام الأمان جاهز ومدمج في الملف');
 // Initialize Supabase Client
 (function() {
     const SUPABASE_URL = 'https://xlieswavjjgqsnczesct.supabase.co';
-    const SUPABASE_KEY = 'sb_publishable_5OgzcAecYuLwipCfNnmBsw_hQ7ZpHIl';
+    const SUPABASE_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InhsaWVzd2F2ampncXNuY3plc2N0Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NzEzNDY3ODMsImV4cCI6MjA4NjkyMjc4M30.B5UvhsGQ80h86pOTFa9Yd9YOjK1DaY-8KPN1mtLBRbk';
     
     // Wait for DOM and Supabase SDK to be ready
     if (document.readyState === 'loading') {
